test/files/run/repl-paste-2.check
Type in expressions to have them evaluated.
Type :help for more information.

scala> 

scala> scala> 123
res0: Int = 123

scala> 567
res1: Int = 567

scala> res0 + res1
res2: Int = 690

scala> val x = dingus
<console>:7: error: not found: value dingus
       val x = dingus
               ^

scala> val x = "dingus"
x: java.lang.String = dingus

scala> x.length
res3: Int = 6

scala> x.length + res3
res4: Int = 12

// Replaying 7 commands from transcript.

val res0 = { 123 }
res0: Int = 123

val res1 = { 567 }
res1: Int = 567

val res2 = { res0 + res1 }
res2: Int = 690

val x = dingus
<console>:7: error: not found: value dingus
       val x = dingus
               ^

val x = "dingus"
x: java.lang.String = dingus

val res3 = { x.length }
res3: Int = 6

val res4 = { x.length + res3 }
res4: Int = 12


scala> 
